--- a/pom.xml
+++ b/pom.xml
@@ -82,5 +82,11 @@
       <artifactId>aws-lambda-java-core</artifactId>
       <version>1.1.0</version>
     </dependency>
+    
+    <dependency>
+    	<groupId>com.amazonaws</groupId>
+    	<artifactId>dynamodb-lock-client</artifactId>
+    	<version>1.0.0</version>
+	</dependency>
   </dependencies>
 </project>
